--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,15 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["**", "!node_modules", "!.next", "!dist", "!build", "!.source"]
+    "includes": [
+      "**",
+      "!node_modules",
+      "!.next",
+      "!dist",
+      "!build",
+      "!.source"
+    ],
+    "ignore": ["content/docs/04-create-brand-context.mdx"]
   },
   "formatter": {
     "enabled": true,
