--- a/package.json
+++ b/package.json
@@ -11,23 +11,27 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "class-variance-authority": "^0.7.1",
+    "fumadocs-core": "15.8.5",
+    "fumadocs-mdx": "12.0.3",
+    "fumadocs-ui": "15.8.5",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "lucide-react": "^0.544.0",
-    "fumadocs-ui": "15.8.5",
-    "fumadocs-core": "15.8.5",
-    "fumadocs-mdx": "12.0.3"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.5",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/mdx": "^2.0.13",
     "@types/node": "24.6.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
-    "typescript": "^5.9.3",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.14",
-    "tailwindcss": "^4.1.14",
     "postcss": "^8.5.6",
-    "@biomejs/biome": "^2.2.5"
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3"
   }
 }
